# embodied-perception

./: .gitignore  CONTRIBUTING.md  README.md  environment.yml  pyproject.toml  requrements.txt
ember/: corners.py  torch_perf_utils.py  util.py  viser_sphere_tracer.ipynb  zed.py
ember/cpp/: helloworld
ember/math/: camera.py  homogenous.py  quat.py
ember/wrappers/: viser.py  zed.py
experiments/gaussians3d/: model.py  model_test.py  viser_unproject.py
experiments/perf/: camera_intrinsics.ipynb
notebooks/: checkerboard.ipynb  imu.ipynb  mapping_landmarks.ipynb  viser_sphere_tracer.ipynb  viser_sphere_tracer.py
notebooks/archive/: checkerboard.ipynb  zed_camera.ipynb
scripts/: checkerboard.py  sl_live_to_rerun.py  sl_recording_to_rerun.py  webcam_to_streamlit_with_corners.py
tests/: test_camera.py
